--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section>
+   <section class="top-banner">
        <div class="halfwidth">
-        <h1>Welcome To</h1>
+        <h1>Welcome To hi</h1>
         <h1>My <span class="portfolio">Portfolio</span> Website</h1>
         <h3>Wor class professional web dev</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione, veniam iure eos dicta, tenetur ea fuga facilis, repudiandae aliquam omnis molestias adipisci? Adipisci, quidem vel.</p>
+        <a class="btn-1" target="_blank" href="https://developerlemon.me/">Hire me</a>
        </div>
        <div class="halfwidth">
            <img src="images/lemon.jpg" alt="">
